Coverity analysis defect 134243: Uninitialized scalar field

XMLWordPrintableJSON

    • Sharding NYC
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/s/session_catalog_migration_source.h:311: UNINIT_CTOR 134243 Class member declaration for "_averageSessionDocSize".
      /src/mongo/db/s/session_catalog_migration_source.cpp:216: UNINIT_CTOR 134243 Non-static class member "_averageSessionDocSize" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Adi Zaimi (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: