SERVER-71697: Initialize scalar member field at construction